codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__canceled_history_search_restores_visible_stars_only_before_the_original_deadline.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
expires while open: false
initial:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Zuno to do anything          ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left
searching:

› stored draft

  reverse-i-search: stored  enter accept · esc cancel
after escape:
                                        ⠁               ⡀   ⠄           ⠄   ⠄
› Ask Zuno to do anything                                    ⠈
      ⠠                             ⠠        ⢀ ⢀     ⡀                         ⠄
  ? for shortcuts                                            100% context left

expires while open: true
initial:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Zuno to do anything          ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left
searching:

› stored draft

  reverse-i-search: stored  enter accept · esc cancel
after escape:

› Ask Zuno to do anything

  ? for shortcuts                                            100% context left
